--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -7,9 +7,11 @@ title: Alpha's Blog
 subtitle: ""
 description: ""
 keywords:
-author: John Doe
+author: Alpha
 language: zh-TW
 timezone: ""
+navbar:
+  blog_title: Alpha's Blog
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
@@ -85,7 +87,7 @@ updated_option: "mtime"
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 10
+per_page: 5
 pagination_dir: page
 
 # Include / Exclude file(s)
