--- a/_config.fluid.yml
+++ b/_config.fluid.yml
@@ -7,15 +7,13 @@ title: Alpha's Blog
 subtitle: ""
 description: ""
 keywords:
-author: Alpha
+author: John Doe
 language: zh-TW
 timezone: ""
-navbar:
-  blog_title: Alpha's Blog
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: http://alphatero.github.io/alpha.github.io
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -87,7 +85,7 @@ updated_option: "mtime"
 
 # Pagination
 ## Set per_page to 0 to disable pagination
-per_page: 5
+per_page: 10
 pagination_dir: page
 
 # Include / Exclude file(s)
@@ -99,8 +97,9 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: fluid
-scheme: Isolation
+# theme: fluid
+theme: landscape
+# scheme: Isolation
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
