--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ timezone: ""
 
 # URL
 ## Set your site url here. For example, if you use GitHub Page, set url as 'https://username.github.io/project'
-url: http://example.com
+url: http://alphatero.github.io/alpha.github.io
 permalink: :year/:month/:day/:title/
 permalink_defaults:
 pretty_urls:
@@ -97,8 +97,9 @@ ignore:
 # Extensions
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
-theme: fluid
-scheme: Isolation
+# theme: fluid
+theme: landscape
+# scheme: Isolation
 
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
